# Rays

./: .gitignore  CMakeLists.txt  Makefile  Readme.md
include/graphics/: camera.hpp  color.hpp  corner.hpp  face.hpp  point.hpp
include/os_api/: screen.hpp  window.hpp
include/screen/: color_screen.hpp  screen.hpp
includes/graphics/: face.hpp  point.hpp
includes/screen/: screen.hpp
src/: CMakeLists.txt  main.cpp
src/graphics/: CMakeLists.txt  camera.cpp  corner.cpp  face.cpp  face.hpp  point.cpp  point.hpp
src/os_api/: CMakeLists.txt  screen.cpp  window.cpp
src/screen/: CMakeLists.txt  color_screen.cpp  screen.cpp
src/screen/tests/: screen.cc
tests/: CmakeLists.txt
tests/screen/: CMakeLists.txt  screen.cc
